--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,8 +9,7 @@
 
 .calculator {
     height: 90vh;
-    width: 50vh;
-    background-color: blue;  
+    width: 50vh; 
 }
 
 .screen {
@@ -25,7 +24,7 @@
 
 .computatation-screen {
   height: 6vh;
-  font-size: 1px;
+  font-size: 4rem;
   /* To display the value at the bottom-right of the container */
   display: flex;
   justify-content: flex-end;
@@ -34,7 +33,7 @@
 
 .result-screen {
     height: 19vh;
-    font-size: 8rem;
+    font-size: 5rem;
     font-weight: 600;
     /* To display the value at the bottom-right of the container */
     display: flex;
@@ -59,9 +58,10 @@
 .btn {
   width: 5rem;
   height: 5rem;
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: inherit;
   background-color: #333333;
+  color: white;
   border: 1px solid transparent;
   border-radius: 50%;
   padding: 15px;
@@ -83,16 +83,16 @@
 .btn--large {
   width: 11rem;
   height: 5rem;
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: inherit;
   background-color:#333333;
   border: 1px solid transparent;
   border-radius: 45%;
-  padding: 20px;
-  margin: 10px;
+  padding: 25px;
+  margin: 10px 10px;
   outline: none;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   transition: all .2s;
   transition: all .2s;
